# dynamic

./: README  display.c  main  main.c
cmake/case/: README.md  main.c  main.cpp
cmake/case/src/: CMakeLists.txt
cmake/case/src/hellolib/: CMakeLists.txt
cmake/case/src/hellolib/include/: hello.h
cmake/case/src/hellolib/src/: hello.c  hello.cpp
cmake/case2/: CMakeLists.txt
cmake/case2/src/: CMakeLists.txt
cmake/case2/src/systemlib/: CMakeLists.txt
cmake/case2/src/systemlib/include/: system.h
cmake/case2/src/systemlib/src/: system.cpp
