CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/build/lib")
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/systemlib/src systemlib_src)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/systemlib/include")
ADD_LIBRARY(system SHARED ${systemlib_src})
ADD_LIBRARY(system_static STATIC ${systemlib_src})
SET_TARGET_PROPERTIES(system_static PROPERTIES OUTPUT_NAME "system")
SET_TARGET_PROPERTIES(system PROPERTIES VERSION 1.2 SOVERSION 1)
